# Raff

./: .gitignore  BUILD-PLAN.md  CHANGELOG.md  NOTES.md  README.md  clipboard-manager-plan-ar.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: RAFF_AUDIT_AND_FIXES_AR.md
scripts/: gen-icons.mjs
src/: firstrun.css  firstrun.html  index.html  panel.css  settings.css  settings.html  styles.css  theme.js  update.css  update.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  update.json
src-tauri/icons/: icon-dark.icns  icon-light.icns  icon.icns
src-tauri/src/: commands.rs  macos.rs  main.rs  monitor.rs  panel.rs  paste.rs  storage.rs  tray.rs  updater.rs
src/assets/app-icon/Raff.iconset/: Contents.json
src/js/: diag.js  firstrun.js  icons.js  logic.js  mock.js  panel.js  settings.js  store.js  update-flow.js  update.js
tests/: logic.test.mjs  panel-delete-shortcut.test.mjs  panel-endurance.test.mjs  panel-failure-state.test.mjs  panel-recovery.test.mjs  panel-refresh-fallback.test.mjs  panel.test.mjs  settings-clear-history.test.mjs
tests/helpers/: panel-harness.mjs
