[package]
name = "raff"
version = "2.1.1"
description = "رفّ — personal, local-only, keyboard-first clipboard manager for macOS"
authors = ["Raff"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "tiff"] }
core-graphics = "0.25"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSAppearance",
    "NSPasteboard",
    "NSPasteboardItem",
    "NSWorkspace",
    "NSRunningApplication",
    "NSImage",
    "NSImageRep",
    "NSBitmapImageRep",
    "NSGraphics",
] }

[profile.release]
codegen-units = 1
lto = true
strip = true
